--- a/DSFMix.github.references.bib
+++ b/DSFMix.github.references.bib
@@ -3,7 +3,7 @@
   author = { Anchang, A. and Mendez-Giraldez, R. and Xu, X. and Archer, T. K. and Chen, Q. and Plevritis, S. K. and Motsinger-Reif, A. A. and Jian-Liang, Li},
   journal = {Briefings in Bioinformatics},
   year = {2022},
-  pages = {in press},
+  pages = {under review},
   url = {https://github.com/NIEHS/DSFMix/},
 }
 
