--- a/DSFMix.github.references.bib
+++ b/DSFMix.github.references.bib
@@ -1,10 +1,17 @@
 @article{anchang2022,
-  title = {Visualization, Benchmarking and Characterization of Nested Single-cell Heterogeneity as Dynamic Forest Mixtures},
-  author = { Anchang, A. and Mendez-Giraldez, R. and Xu, X. and Archer, T. K. and Chen, Q. and Plevritis, S. K. and Motsinger-Reif, A. A. and Jian-Liang, Li},
-  journal = {Briefings in Bioinformatics},
-  year = {2022},
-  pages = {under review},
-  url = {https://github.com/NIEHS/DSFMix/},
+	author = {Anchang, Benedict and Mendez-Giraldez, Raul and Xu, Xiaojiang and Archer, Trevor K and Chen, Qing and Hu, Guang and Plevritis, Sylvia K and Motsinger-Reif, Alison Anne and Li, Jian-Liang},
+	title = "{Visualization, benchmarking and characterization of nested single-cell heterogeneity as dynamic forest mixtures}",
+	journal = {Briefings in Bioinformatics},
+	volume = {23},
+	number = {2},
+	year = {2022},
+	month = {02},
+	abstract = "{A major topic of debate in developmental biology centers on whether development is continuous, discontinuous, or a mixture of both. Pseudo-time trajectory models, optimal for visualizing cellular progression, model cell transitions as continuous state manifolds and do not explicitly model real-time, complex, heterogeneous systems and are challenging for benchmarking with temporal models. We present a data-driven framework that addresses these limitations with temporal single-cell data collected at discrete time points as inputs and a mixture of dependent minimum spanning trees (MSTs) as outputs, denoted as dynamic spanning forest mixtures (DSFMix). DSFMix uses decision-tree models to select genes that account for variations in multimodality, skewness and time. The genes are subsequently used to build the forest using tree agglomerative hierarchical clustering and dynamic branch cutting. We first motivate the use of forest-based algorithms compared to single-tree approaches for visualizing and characterizing developmental processes. We next benchmark DSFMix to pseudo-time and temporal approaches in terms of feature selection, time correlation, and network similarity. Finally, we demonstrate how DSFMix can be used to visualize, compare and characterize complex relationships during biological processes such as epithelial–mesenchymal transition, spermatogenesis, stem cell pluripotency, early transcriptional response from hormones and immune response to coronavirus disease. Our results indicate that the expression of genes during normal development exhibits a high proportion of non-uniformly distributed profiles that are mostly right-skewed and multimodal; the latter being a characteristic of major steady states during development. Our study also identifies and validates gene signatures driving complex dynamic processes during somatic or germline differentiation.}",
+	issn = {1477-4054},
+	doi = {10.1093/bib/bbac017},
+	url = {https://doi.org/10.1093/bib/bbac017},
+	note = {bbac017},
+	eprint = {https://academic.oup.com/bib/article-pdf/23/2/bbac017/42806600/bbac017.pdf},
 }
 
 @article{hoffman_single-cell_2020,
